--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,7 +59,8 @@ jobs:
       - name: Terraform Apply
         id: apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false -parallelism=1 plainfile
+        run: terraform apply -auto-approve -input=false -parallelism=1
+        # plainfile
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
